--- a/imports/ui/Form.html
+++ b/imports/ui/Form.html
@@ -1,8 +1,9 @@
-<template name="form">
-    <form id="chat-form">
-        <label>
-            <input type="text" name="text" placeholder="Type to add message"/>
+<template name="messageForm">
+    <form id="chat-form" class="chat-form">
+        <label class="chat-form__label">
+            <input class="input chat-form__input" id="chat-input" type="text" name="text"
+                   placeholder="Type to add message"/>
         </label>
-        <button type="submit">Send message</button>
+        <button class="button chat-form__button" type="submit" disabled="{{isDisabledSubmit}}">Send message</button>
     </form>
 </template>
