добавляет костыль для обновлениия данных в публикации

--- a/imports/ui/Messages.html
+++ b/imports/ui/Messages.html
@@ -30,4 +30,11 @@
             </li>
         {{/each}}
     </ul>
+    <form id="chat-form" class="chat-form">
+        <label class="chat-form__label">
+            <input class="input chat-form__input" id="chat-input" type="text" name="text"
+                   placeholder="Type to add message"/>
+        </label>
+        <button class="button chat-form__button" type="submit" disabled="{{isDisabledSubmit}}">Send message</button>
+    </form>
 </template>
